[project]
app-"main:app"
name = "fastserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.122.0",
    "httpx>=0.28.1",
    "motor>=3.7.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "requests>=2.32.5",
]
